--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-slate
 title: WELCOME
 description: I'm Nicolas Faché an undergraduate student at the California Polytechnic Institute, San Luis Obispo.
 description: Here are a few different pages about my past work and current projects along with my contact information!
+<button type="button" onclick="alert('Hello world!')">Projects!</button>
