--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,20 @@
-theme: jekyll-theme-slate
-title: WELCOME
-description: I'm Nicolas Fache an undergraduate student at the California Polytechnic Institute, San Luis Obispo.
-description: Here are a few different pages about my past work and current projects along with my contact information!
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+div.relative {
+  position: title;
+  width: 400px;
+  height: 400px;
+}
+</style>
+</head>
+
+<body>
+<h2>WELCOME</h2>
+<p>I'm Nicolas Fache an undergradgraduate student at the California Polytechnic Institute, San Luis Obispo.</p>
+<div class = "Description">
+Here are a few different pages about my past work and current projects along with my contact information!
+</div>
+</body>
+</html>
