--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-div.title {
-  position: title;
-  width: 400px;
-  height: 400px;
-}
-</style>
-</head>
-
-<body>
-<h2>WELCOME</h2>
-<p>I'm Nicolas Fache an undergradgraduate student at the California Polytechnic Institute, San Luis Obispo.</p>
-<div class = "Description">
-Here are a few different pages about my past work and current projects along with my contact information!
-</div>
-</body>
-</html>
+title: Nicolas Fache
+author:
+  name: Nicolas Fache
+  email: nicolas.fache10@gmail.com
+  github: nicolasfache
