--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,15 @@
+permalink: /:categories/:year/:month/:day/:title
+
+exclude: {".rvmrc", ".rbenv-version", "ReadMe.md", "Rakefile", "changelog.md", "License.md}
+highlighter: rouge
+
+
+
 title: Nicolas Fache
 author:
   name: Nicolas Fache
   email: nicolas.fache10@gmail.com
   github: nicolasfache
 
-production_url: https://nicolasfache.github.io/nicolas_fache
-BASE_PATH: https://nicolasfache.github.io/nicolas_fache
+production_url: https://nicolasfache.github.io/Nicolas_Fache
+BASE_PATH: https://nicolasfache.github.io/Nicolas_Fache
